pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: samplePod
spec:
  containers:
  - image: dreamcatchernick/nicktest
    name: testNodejs
    imagePullPolicy: Always
