service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
  labels:
    app: sample
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: sample
