service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  labels:
    app: sample
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 30000
  selector:
     app: sample
